objects/SFDC_Industry__mdt.object
<CustomObject>
    <description>Salesforce Industries clouds available for running transition assessments and upgrade automation</description>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Namespace__c</fullName>
        <label>Package Namespace</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Version__c</fullName>
        <label>Package Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFDC Industry</label>
    <pluralLabel>SFDC Industry</pluralLabel>
</CustomObject>